examples/test/testpolicy8992.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8992
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key26: value8
      key29: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value12
          key29: value35
      podSelector:
        matchLabels:
          key47: value38
